--- a/HomeFree-Form/LoanCalculator/LoanCalculator.csproj
+++ b/HomeFree-Form/LoanCalculator/LoanCalculator.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{ED25DC6D-4F1D-4640-AD91-A78E2927BCD0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>LoanCalculator</RootNamespace>
     <AssemblyName>LoanCalculator</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
@@ -43,6 +46,7 @@
     <Compile Include="ILoan.cs" />
     <Compile Include="ILoanPayOff.cs" />
     <Compile Include="Loan.cs" />
+    <Compile Include="LoanObjectModel.cs" />
     <Compile Include="LoanPayOff.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
