refactor Calculator to manage all buisness logic

--- a/HomeFree-Form/LoanCalculator/LoanCalculator.csproj
+++ b/HomeFree-Form/LoanCalculator/LoanCalculator.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Loan.cs" />
     <Compile Include="LoanObjectModel.cs" />
     <Compile Include="LoanPayOff.cs" />
+    <Compile Include="ProfileModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
