finished tests for how much house
app running with refactored code

--- a/HomeFree-Form/HomeFree_Test/HomeFree_Test.csproj
+++ b/HomeFree-Form/HomeFree_Test/HomeFree_Test.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculation_Tests.cs" />
+    <Compile Include="HowMuch_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TotalInterest_Tests.cs" />
   </ItemGroup>
