--- a/HomeFree-Form/LoanCalculator/LoanCalculator.csproj
+++ b/HomeFree-Form/LoanCalculator/LoanCalculator.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HowMuch.cs" />
+    <Compile Include="HowMuchModel.cs" />
     <Compile Include="ICalculation.cs" />
     <Compile Include="Calculator.cs" />
     <Compile Include="ICalculator.cs" />
